Formalisation du Bot et des Commands
luigi